🔨 Refacor: 메인 전시회 조회 API 수정 (진행 중인 것만 + 위치 정보 추가)